# wasi-diff

./: .gitmodules  Cargo.toml  README.md  run.sh  rustfmt.toml
samples/: .gitignore  Makefile
samples/apps/: read_write.c  test.c
samples/data/files/: gen_read_files.sh
src/: dirgen.rs  main.rs
src/engines/: mod.rs  wasmedge.rs  wasmer.rs  wasmtime.rs
