[package]
name = "wasi-difftest"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
strum_macros = "0.27.1"
wasmedge-sdk = "0.14.0"
wasmer = "6.0.0-beta.1"
wasmer-compiler = "5.0.4"
wasmer-wasi = "3.1.1"
wasmer-wasix = "0.38.0"
wasmtime = "31.0.0"
wasmtime-wasi = { version = "31.0.0", features = ["preview1"] }
